code25_all/haskell/21783577.txt
http://repos.codelite.org/wx3.0/ubuntu/
cabal install wx
src/cpp/eljgrid.cpp:61:65: error: no matching function for call to ‘wxGridCellEditor::PaintBackground(wxRect, wxGridCellAttr*)’
  self->PaintBackground(wxRect(x, y, w, h), (wxGridCellAttr*)attr);
                                                                 ^
[...]
wxcore-0.90.0.3 depends on wxc-0.90.0.4 which failed to install.

setup: can't find source for Graphics/UI/WXCore/WxcClassInfo in src/haskell,
dist/build/autogen
Failed to install wxcore-0.90.1.0
cabal: Error: some packages failed to install:
wxcore-0.90.1.0 failed during the building phase. The exception was:
ExitFailure 1
Resolving dependencies...
Configuring wx-0.90.1.0...
cabal: At least the following dependencies are missing:
wxcore >=0.90.1.0
Resolving dependencies...
cabal: Could not resolve dependencies:
trying: wx-0.90.1.0
trying: wx-0.90.1.0:+splitbase
rejecting: wxcore-0.90.0.3, 0.90.0.1, 0.90, 0.13.2.3, 0.13.2.1, 0.13.2,
0.12.1.7, 0.12.1.6, 0.12.1.5, 0.12.1.4, 0.12.1.3, 0.12.1.2, 0.12.1.1,
0.11.1.2, 0.11.1.1, 0.11.1.0, 0.11.0, 0.10.13.0, 0.10.13, 0.10.12, 0.10.11,
0.10.10, 0.10.9, 0.10.8, 0.10.7, 0.10.6, 0.10.5, 0.10.4, 0.10.3, 0.10.2,
0.10.1 (conflict: wx-0.90.1.0:splitbase => wxcore>=0.90.1.0)

